--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack serve --hot --mode development "
+    "start": "webpack serve --hot --mode development"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^18.0.5",
+    "dotenv": "^16.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0"
