--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^18.0.5",
+    "bootstrap": "^5.2.3",
     "dotenv": "^16.0.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.6.1"
   },
