--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.1.19",
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@tanstack/react-query": "^5.85.9",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^18.0.5",
     "bootstrap": "^5.2.3",
