--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@types/react-dom": "^18.0.5",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.1",
+    "oidc-client-ts": "^3.3.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.1.0",
+    "react-oidc-context": "^3.3.0",
     "react-router-dom": "^6.6.1",
     "recharts": "^2.5.0"
   },
