--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query": "^5.85.9",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^18.0.5",
+    "bad-words": "^4.0.0",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.1",
     "oidc-client-ts": "^3.3.0",
